--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -9,31 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
 <body>
-  <!-- Header -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">Foodie</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <%= render "landing_page/header" %>
 
   <!-- Hero Section -->
   <section class="hero">
@@ -49,23 +25,23 @@
     <div class="container">
       <h2>Featured Dishes</h2>
       <div class="row">
-        <div class="col-md-4">
-          <div class="menu-item">
-            <img src="https://as2.ftcdn.net/v2/jpg/03/24/16/57/1000_F_324165757_buAX78dg7TGgjh0pB8aUCwOWRkNejmwA.jpg" alt="Pizza">
+        <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="menu-item card h-100">
+            <img src="https://as2.ftcdn.net/v2/jpg/03/24/16/57/1000_F_324165757_buAX78dg7TGgjh0pB8aUCwOWRkNejmwA.jpg" class="img-fluid" alt="Pizza">
             <h4 class="mt-3">Italian Pizza</h4>
             <p>$12.99</p>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="menu-item">
-            <img src="https://img.freepik.com/premium-photo/chicken-shish-kebab-traditional-turkish-food_293953-62.jpg?w=1480" alt="Burger">
+        <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="menu-item card h-100">
+            <img src="https://img.freepik.com/premium-photo/chicken-shish-kebab-traditional-turkish-food_293953-62.jpg?w=1480" class="img-fluid" alt="Burger">
             <h4 class="mt-3">Cheese Burger</h4>
             <p>$8.99</p>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="menu-item">
-            <img src="https://img.freepik.com/free-photo/grilled-meat-served-with-fresh-vegetables_140725-3147.jpg?t=st=1726135825~exp=1726139425~hmac=ac222094e6227ddd7152b7ebc006e405b959fc4a53e7726b7caec0ae9c0c5083&w=1380" alt="Pasta">
+        <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="menu-item card h-100">
+            <img src="https://img.freepik.com/free-photo/grilled-meat-served-with-fresh-vegetables_140725-3147.jpg?t=st=1726135825~exp=1726139425~hmac=ac222094e6227ddd7152b7ebc006e405b959fc4a53e7726b7caec0ae9c0c5083&w=1380" class="img-fluid" alt="Pasta">
             <h4 class="mt-3">Creamy Pasta</h4>
             <p>$10.99</p>
           </div>
@@ -103,15 +79,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <p>&copy; 2024 Foodie. All Rights Reserved.</p>
-    </div>
-  </footer>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+  <%= render "landing_page/footer" %>
 </body>
 </html>
