contact and about page design

--- a/app/views/landing_page/menu.html.erb
+++ b/app/views/landing_page/menu.html.erb
@@ -9,13 +9,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active h-50">
-        <img src="https://as1.ftcdn.net/v2/jpg/02/97/67/70/1000_F_297677001_zX7ZzRq8DObUV5IWTHAIhAae6DuiEQh4.jpg" class="d-block w-100 h-50" alt="...">
+        <img src="https://plus.unsplash.com/premium_photo-1666353535582-9268ce1a981c?q=80&w=2980&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class=" w-100 h-50" alt="...">
       </div>
       <div class="carousel-item h-50">
-        <img src="https://as2.ftcdn.net/v2/jpg/04/76/57/27/1000_F_476572792_zMwqHpmGal1fzh0tDJ3onkLo88IjgNbL.jpg" class="d-block w-100 h-50" alt="...">
+        <img src="https://plus.unsplash.com/premium_photo-1666353534894-2885dd0dca40?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class=" w-100 h-50" alt="...">
       </div>
       <div class="carousel-item h-50">
-        <img src="https://as1.ftcdn.net/v2/jpg/02/97/67/70/1000_F_297677001_zX7ZzRq8DObUV5IWTHAIhAae6DuiEQh4.jpg" class="d-block w-100 h-50" alt="...">
+        <img src="https://plus.unsplash.com/premium_photo-1666353533967-4a2b3d3c03ab?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class=" w-100 h-50" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
