--- a/app/views/landing_page/_header.html.erb
+++ b/app/views/landing_page/_header.html.erb
@@ -14,10 +14,10 @@
           <a class="nav-link" href="<%= menu_url %>">Menu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="<%= about_url %>">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="<%= contact_url %>">Contact</a>
         </li>
       </ul>
     </div>
